# tabpfn-extensions

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  FAILING_TESTS.md  LICENSE  README.md  mypy.ini  pyproject.toml  setup.py
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: pull_request.yml
examples/: README.md
examples/embedding/: README.md  get_embeddings.py
examples/hpo/: tuned_tabpfn.py
examples/interpretability/: feature_selection.py  shap.py  shap_example.py  shapiq.py  shapiq_example.py
examples/large_datasets/: large_datasets_example.py
examples/many_class/: many_class_classifier_example.py
examples/phe/: phe_example.py
examples/rf_pfn/: rf_pfn_example.py
examples/unsupervised/: detect_outliers.py  generate_data.py  imputation.py
scripts/: __init__.py  check_backend_compatibility.py  get_max_dependencies.py  get_min_dependencies.py
src/tabpfn_community/: utils.py
src/tabpfn_community/hpo/: __init__.py
src/tabpfn_community/post_hoc_ensembles/: pfn_phe.py  save_splitting.py
src/tabpfn_community/rf_pfn/: utils.py
src/tabpfn_community/sklearn_ensembles/: configs.py  meta_models.py
src/tabpfn_extensions/: __init__.py  utils.py  utils_todo.py
src/tabpfn_extensions/benchmarking/: experiment.py
src/tabpfn_extensions/classifier_as_regressor/: __init__.py  classifier_as_regressor.py
src/tabpfn_extensions/classifier_as_regressor/docs/: README.md
src/tabpfn_extensions/embedding/: __init__.py  tabpfn_embedding.py
src/tabpfn_extensions/hpo/: __init__.py  search_space.py  tuned_tabpfn.py
src/tabpfn_extensions/interpretability/: README.md  __init__.py  experiments.py  feature_selection.py  shap.py  shapiq.py
src/tabpfn_extensions/many_class/: __init__.py  many_class_classifier.py
src/tabpfn_extensions/many_class/docs/: README.md
src/tabpfn_extensions/misc/: __init__.py
src/tabpfn_extensions/post_hoc_ensembles/: README.md  __init__.py  abstract_validation_utils.py  greedy_weighted_ensemble.py  pfn_phe.py  save_splitting.py  sklearn_interface.py  utils.py
src/tabpfn_extensions/rf_pfn/: SklearnBasedDecisionTreeTabPFN.py  SklearnBasedRandomForestTabPFN.py  __init__.py  configs.py  sklearn_based_decision_tree_tabpfn.py  sklearn_based_random_forest_tabpfn.py  utils.py
src/tabpfn_extensions/scoring/: __init__.py  scoring_utils.py
src/tabpfn_extensions/sklearn_ensembles/: __init__.py  configs.py  meta_models.py  weighted_ensemble.py
src/tabpfn_extensions/unsupervised/: __init__.py  experiments.py  unsupervised.py
tests/: CONFTEST_GUIDE.md  README.md  conftest.py  test_base_tabpfn.py  test_classifier_as_regressor.py  test_dt_pfn.py  test_embedding.py  test_examples.py  test_hpo.py  test_interpretability.py  test_large_datasets.py  test_many_class.py  test_many_class_classifier.py  test_post_hoc_ensembles.py  test_rf_pfn.py  test_unsupervised.py  utils.py
tests/interpretability/: test_shap.py
